Fixed banner overflow

--- a/css/index.css
+++ b/css/index.css
@@ -151,6 +151,7 @@ a {
 
 .banner-width {
   width: 100vw;
+  max-width:100%;
 }
 
 #banner-overlay-left {
